2006-01-19  David Hampton  <hampton@employees.org>

	* src/business/business-gnome/dialog-invoice.c: Delete the invoice
	page completely when closing it.  Prevents a crash when trying to
	open a different data file is there is an invoice page in the
	window.

	* src/gnome-search/gnc-general-search.c: Finish the job. Make sure
	this component isn't unregistered multiple times.

2006-01-18  Derek Atkins  <derek@ihtfp.com>

	* src/bin/gnucash-bin.c:
	* src/gnome-utils/gnc-splash.c:
	  Always print the SVN version and build date.
	  Make "development version" based on GNUCASH_SVN
	* src/gnome-utils/Makefile.am:
	  Define GNUCASH_SVN whenever the source is not a dist tarball.

2006-01-18  David Hampton  <hampton@employees.org>

	* src/business/business-core/gncOwner.[ch]:
	* src/business/business-gnome/dialog-invoice.[ch]:
	* src/business/business-gnome/gnc-plugin-page-invoice.c:
	Save/restore business invoice pages.

	* src/app-utils/gnc-component-manager.c: Tweak a debugging
	statement.

	* src/gnome-search/gnc-general-search.c: Unregister this component
	properly when destroying it.

	* src/gnome-utils/gnc-query-list.c: The GtkObject destroy function
	can be called multiple times. Protect from unregistering the
	component multiple times.

2006-01-18  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/gnc-account-merge.[ch]: C-style comment
	conventions; rename identifiers that are C++ keywords.

2006-01-18  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-plugin-page-account-tree.c
	(gnc_plugin_page_account_tree_create_widget): Remove name-editing
	callback setup.

2006-01-18  David Hampton  <hampton@employees.org>

	* All xxx.schemas files renamed to xxx.schemas.in.
	* All schema directory Makefile.am files replaced.
	* make-gnucash-potfiles.in: Now also pulls strings from schema
	files.  Together these fix bugs #327507 and #327353 which are
	about schema file strings not being translated.

2006-01-18  Joshua Sled  <jsled@asynchronous.org>
