@@ -1,3 +1,10 @@
+2006-01-19  Derek Atkins  <derek@ihtfp.com>
+
+	* src/business/business-gnome/dialog-invoice.c:
+	  need to #include gkeyfile.h for glib24 systems
+	* src/business/business-gnome/Makefile.am:
+	  link against glib26 compatibility library.
+
 2006-01-19  David Hampton  <hampton@employees.org>
 
 	* src/business/business-gnome/dialog-invoice.c: Delete the invoice
